--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -50,6 +49,6 @@
 </head>
   <body class="bg-slate-100">
     <div id="root"></div>
-    <script type="module" src="/dist/bundle.js"></script>
+    <script type="module" src="./bundle.js"></script>
   </body>
 </html>
